content overflow fixed. Background image enlarged. Test jolien

--- a/inc/styles/main.css
+++ b/inc/styles/main.css
@@ -77,8 +77,9 @@ nav.main-menu ul li.current a {
 .intro-section {
   background: url('../../images/intro.png') no-repeat center;
   background-size: cover;
-  height: 100vh;
+  height: auto;
   width: 100%;
+  padding: 0 10.5vw 17.7vh 10.5vw;
 }
 
 .intro-section .row {
@@ -94,7 +95,6 @@ nav.main-menu ul li.current a {
 }
 
 .intro-card {
-  /*max-width: 414px;*/
   max-width: 27.3%;
   min-height: 54.1vh;
   background: #fff;
